# Snake_cpp

./: .gitignore  CMakeLists.txt  README.md
include/: Food.h  GameController.h  GameWidget.h  ScoreManager.h  Snake.h
resources/: gamewidget.ui
src/: Food.cpp  GameController.cpp  GameWidget.cpp  ScoreManager.cpp  Snake.cpp  main.cpp
